# raion-telegram-bot

./: .env_prod  pyproject.toml
bot/: backup_script.py  models.py  raion_bot.py
bot/dict_names/: categories.py  colors.py  visibility_types.py
bot/keyboards/: keyboards_storage.py
bot/migrations/: 0001_initial.py  0002_create_data.py  0003_photo_url.py
bot/service/: category_service.py  colors_service.py  photo_service.py  remote_service.py  thing_service.py  visibility_types_service.py
bot/state/: state.py
bot/tg_model/: tg_models.py
bot/typography/: texts.py
bot/utils/: string_converter.py  thing_options.py
core/: settings.py
management/management/commands/: run_bot.py
