[tool.poetry]
name = "raionbot"
version = "0.1.0"
description = ""
authors = ["A1danz <galeevaidan@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.7"
django-grappelli = "4.0.1"
environs = "11.0.0"
gunicorn = "22.0.0"
pyTelegramBotAPI = "4.21.0"
psycopg2 = "2.9.9"
aiohttp = "3.9.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
